# TicTacToe

./: .gitignore  CMakeLists.txt  EnumClasses.hpp  GUI_Utils.cc  GUI_Utils.cxx  Programm.drawio  README.md  Utilities.hpp  config.txt  main.cpp
Handler/: EnumClasses.hpp  GUI_Handler.cpp  GUI_Handler.hpp  Game_Handler.cpp  Game_Handler.hpp  Gamesetup_Handler.cpp  Gamesetup_Handler.hpp  Menu_Handler.cpp  Menu_Handler.hpp  Player_Handler.cpp  Player_Handler.hpp  Playfield_Handler.cpp  Playfield_Handler.hpp
Player/: Bot.hpp  Human_Player.cpp  Human_Player.hpp  Player.cpp  Player.hpp  Random_Bot.cpp  Random_Bot.hpp  Smart_Bot.cpp  Smart_Bot.hpp
Testing/: CMakeLists.txt
Testing/src/: Playfield_Handler.hpp  PreSmartBot.cpp  PreSmartBot.hpp  Random_Bot.cpp  Random_Bot.hpp
Testing/test/: CMakeLists.txt  SmartBotTesting.cpp  TicTacToeTest.cpp
gcm.cache/: GUI_Utils.gcm
